<resources>
    <string name="app_name">OrderApp</string>
    <string name="wc_search_txt" translatable="false">Where are you going to go</string>
    <string name="app_menu_title">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_all">All</string>
    <string name="menu_near_me">Near me</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_signin">Sign In</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="title_activity_oder">OderActivity</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="view_bill">Bill</string>
    <string name="forget_psw">Forgot password</string>
    <string name="bill_paid">The bill has been paid</string>
    <string name="title_activity_admin_manager">AdminManagerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="invoice">Invoice</string>
    <string name="product">Products</string>
    <string name="tracking">Tracking</string>
    <string name="tools">Tools</string>
    <string name="setting">Setting</string>
    <string name="admin_page">Admin Page</string>
    <string name="section_format">Page %1$d</string>

    <string name="add_item_title">Mô tả sản phẩm</string>
    <string name="title_category">Category</string>
    <string name="title_name">Name</string>
    <string name="title_price">Price</string>
    <string name="title_desc">Description</string>
    <string name="title_open_hour">Open hour</string>
    <string name="title_activity_bill">BillActivity</string>

</resources>
